--- a/src/index.css
+++ b/src/index.css
@@ -225,3 +225,51 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: var(--color-principal);
 }
+
+/* --- ANIMACIÓN DE CORAZÓN --- */
+@keyframes heartBeat {
+  0% {
+    transform: scale(1);
+  }
+
+  25% {
+    transform: scale(1.3);
+  }
+
+  50% {
+    transform: scale(1);
+  }
+
+  75% {
+    transform: scale(1.3);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+.heart-icon {
+  transition: all 0.3s ease;
+  fill: transparent;
+  /* Por defecto transparente (solo borde) */
+  stroke: white;
+  /* Borde blanco */
+  stroke-width: 2;
+}
+
+.btn-heart:hover .heart-icon {
+  transform: scale(1.1);
+  stroke: #ff4757;
+  /* Se pone rojo al pasar el mouse */
+}
+
+/* Cuando está activo (Favorito) */
+.btn-heart.active .heart-icon {
+  fill: #ff4757;
+  /* Relleno Rojo */
+  stroke: #ff4757;
+  /* Borde Rojo */
+  animation: heartBeat 0.8s ease-in-out;
+  /* LATIDO */
+}
